@@ -22,6 +22,11 @@ remctl 3.6 (unreleased)
     Fix problems with PCRE detection on platforms that have the library
     but not pcre-config or the pcre.h header file, such as Mac OS X.
 
+    Update to rra-c-util 4.9:
+
+    * Fix GCC warnings of casts that could increase alignment.
+    * Add a portable replacement for a missing strndup.
+
 remctl 3.5 (2013-06-28)
 
     Fix a long-standing race condition in remctld (introduced in remctl
